; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_x509_crt.c_mbedtls_x509_crt_verify.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_x509_crt.c_mbedtls_x509_crt_verify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mbedtls_x509_crt_profile_default = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mbedtls_x509_crt_verify(i32* %0, i32* %1, i32* %2, i8* %3, i32* %4, i32 (i8*, i32*, i32, i32*)* %5, i8* %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32 (i8*, i32*, i32, i32*)*, align 8
  %14 = alloca i8*, align 8
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32* %2, i32** %10, align 8
  store i8* %3, i8** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32 (i8*, i32*, i32, i32*)* %5, i32 (i8*, i32*, i32, i32*)** %13, align 8
  store i8* %6, i8** %14, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = load i32*, i32** %9, align 8
  %17 = load i32*, i32** %10, align 8
  %18 = load i8*, i8** %11, align 8
  %19 = load i32*, i32** %12, align 8
  %20 = load i32 (i8*, i32*, i32, i32*)*, i32 (i8*, i32*, i32, i32*)** %13, align 8
  %21 = load i8*, i8** %14, align 8
  %22 = call i32 @mbedtls_x509_crt_verify_with_profile(i32* %15, i32* %16, i32* %17, i32* @mbedtls_x509_crt_profile_default, i8* %18, i32* %19, i32 (i8*, i32*, i32, i32*)* %20, i8* %21)
  ret i32 %22
}

declare dso_local i32 @mbedtls_x509_crt_verify_with_profile(i32*, i32*, i32*, i32*, i8*, i32*, i32 (i8*, i32*, i32, i32*)*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
